--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,45 +1,44 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
-
-# For a detailed guide to building and testing with Python, read the docs:
-# https://circleci.com/docs/language-python/ for more details
 version: 2.1
 
-# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
-# See: https://circleci.com/docs/orb-intro/
 orbs:
-  # See the Python orb documentation here: https://circleci.com/developer/orbs/orb/circleci/python
   python: circleci/python@2.1.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
   build-and-test:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
     docker:
-      # Specify the version you desire here
-      # See:https://circleci.com/developer/images/image/cimg/python
       - image: cimg/python:3.12
 
-    # Add steps to the job
-    # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
     steps:
-      # Checkout the code as the first step.
       - checkout
       - python/install-packages:
           pkg-manager: pip
-          # app-dir: ~/project/package-directory/  # If your requirements.txt isn't in the root directory.
-          # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
       - run:
           name: Run tests
-          # This assumes pytest is installed via the install-package step above
           command: pytest
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
+  approval-deploy:
+
+    steps:
+     - run:
+          name: Install SSH Dependencies
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y openssh-client
+      - add_ssh_keys:
+          fingerprints:
+            - "SSHA256:rv9Idq7QWNCXoSUZFHyQ1B0fcqmR7NOT9xwtELwlxF8"
+      - run:
+          name: Deploy to Server
+          command: |
+            ssh ecs-user@121.43.134.161 'cd softwares/ && git pull origin main && source venv/bin/activate && pip install -r requirements.txt && ./manage.py migrate && ./manage.py collectstatic --noinput'
+
+
 workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  do-it-all:
     jobs:
       - build-and-test
+      - approval-deploy
+        type: approval
+        name: deploy
+        requires:
+          - build-and-test
