--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,6 @@ jobs:
       - checkout
       - python/install-packages:
           pkg-manager: pip
-      - run:
-          name: Run tests
-          command: pytest
 
   approval-deploy:
     docker:
@@ -32,7 +29,7 @@ jobs:
       - run:
           name: Deploy to Server
           command: |
-            ssh ecs-user@121.43.134.161 'cd softwares/ && git pull origin main && source venv/bin/activate && pip install -r requirements.txt && ./manage.py migrate && ./manage.py collectstatic --noinput'
+            ssh ecs-user@121.43.134.161 'cd softwares/ && git pull origin main && git clone https://github.com/django/django.git && pip install -e django/ && pip install -r requirements.txt && python manage.py runserver collectstatic --noinput'
 
 
 workflows:
