--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run:
           name: Deploy to Server
           command: |
-            ssh ecs-user@121.43.134.161 'cd softwares/ && git pull origin main && git clone https://github.com/django/django.git && pip install -e django/ && pip install -r requirements.txt && python manage.py runserver collectstatic --noinput'
+            ssh ecs-user@XXXXXXX 'cd softwares/ && git pull origin main && git clone https://github.com/django/django.git && pip install -e django/ && pip install -r requirements.txt && python manage.py runserver collectstatic --noinput'
 
 
 workflows:
